--- a/index.html
+++ b/index.html
@@ -4,91 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="styleshett" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-            <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Ana Sayfa</a></li>
-                    <li><a href="#cve">CVE Açıkları</a></li>
-                    <li><a href="#articles">Yazılar</a></li>
-                    <li><a href="#contact">İletişim</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <section class="hero-section">
-        <div class="container">
-            <h2>Güvenliğinizi Artırın</h2>
-            <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
-            <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+<header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#cve">CVE Açıkları</a></li>
+            <li><a href="#articles">Yazılar</a></li>
+            <li><a href="#contact">İletişim</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero-section">
+    <h2>Güvenliğinizi Artırın</h2>
+    <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
+    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+</section>
+
+<main>
+    <section id="featured" class="featured-section">
+        <h2 class="featured-title">Öne Çıkan Konular</h2>
+        <div class="card-container">
+            <div class="card">
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <h3>VPN Kullanımı</h3>
+                <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
         </div>
     </section>
 
-    <main>
-        <section id="featured" class="featured-section">
-            <div class="container">
-                <h2 class="featured-title">Öne Çıkan Konular</h2>
-                <div class="card-container">
-                    <div class="card">
-                        <h3>Phishing Saldırıları</h3>
-                        <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
-                        <a href="#" class="btn">Devamını Oku</a>
-                    </div>
-                    <div class="card">
-                        <h3>VPN Kullanımı</h3>
-                        <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
-                        <a href="#" class="btn">Devamını Oku</a>
-                    </div>
-                    <div class="card">
-                        <h3>Sosyal Mühendislik Saldırıları</h3>
-                        <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
-                        <a href="#" class="btn">Devamını Oku</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <section id="cve" class="cve-section">
+        <h2>Öne Çıkan CVE Açıkları</h2>
+        <ul class="cve-list">
+            <li><strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı. <a href="#">Detaylar</a></li>
+        </ul>
+    </section>
 
-        <section id="cve" class="cve-section">
-            <div class="container">
-                <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
-                <ul>
-                    <li>CVE-2023-12345: Kısa açıklama ve çözüm detayları.</li>
-                    <li>CVE-2023-67890: Kısa açıklama ve çözüm detayları.</li>
-                    <li>CVE-2023-11223: Kısa açıklama ve çözüm detayları.</li>
-                </ul>
-            </div>
-        </section>
+    <section id="articles" class="articles-section">
+        <h2>Son Blog Yazıları</h2>
+        <ul class="blog-list">
+            <li><a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a></li>
+            <li><a href="#">2024'ün En Popüler VPN Hizmetleri</a></li>
+            <li><a href="#">Phishing Saldırılarında Yeni Taktikler</a></li>
+        </ul>
+    </section>
+</main>
 
-        <section id="articles" class="articles-section">
-            <div class="container">
-                <h2 class="articles-title">Son Blog Yazıları</h2>
-                <div class="article-container">
-                    <div class="article">
-                        <h3>Yazı 1 Başlığı</h3>
-                        <p>Kısa açıklama yazısı 1.</p>
-                    </div>
-                    <div class="article">
-                        <h3>Yazı 2 Başlığı</h3>
-                        <p>Kısa açıklama yazısı 2.</p>
-                    </div>
-                    <div class="article">
-                        <h3>Yazı 3 Başlığı</h3>
-                        <p>Kısa açıklama yazısı 3.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+<footer class="footer">
+    <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+</footer>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Atakan Ayaz. Tüm hakları saklıdır.</p>
-        </div>
-    </footer>
 </body>
 </html>
