--- a/index.html
+++ b/index.html
@@ -4,8 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
-    <link rel="styleshett" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #1c1c1c;
+            color: #fff;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .main-header {
+            background-color: #2a2a2a;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .main-header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+
+        .main-header nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .main-header nav ul li {
+            display: inline-block;
+            margin: 0 15px;
+        }
+
+        .main-header a {
+            text-decoration: none;
+            color: #4d8db0;
+            font-size: 1.2rem;
+        }
+
+        .hero-section {
+            padding: 50px 0;
+            text-align: center;
+            background-color: #333;
+        }
+
+        .hero-section h2 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
+        .hero-section p {
+            font-size: 1.2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 15px;
+            background-color: #4d8db0;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .featured-section, .cve-section, .articles-section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #1b1b1b;
+            border-radius: 8px;
+        }
+
+        .featured-title, h2 {
+            text-align: center;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
+
+        .card-container {
+            display: flex;
+            justify-content: space-around;
+            gap: 15px;
+        }
+
+        .card {
+            background-color: #2a2a2a;
+            padding: 20px;
+            border-radius: 8px;
+            width: 30%;
+        }
+
+        .card h3 {
+            margin-top: 0;
+        }
+
+        .card p {
+            margin-bottom: 10px;
+        }
+
+        .cve-list, .blog-list {
+            list-style: none;
+            padding: 0;
+            font-size: 1.1rem;
+            line-height: 1.6;
+        }
+
+        .cve-list li, .blog-list li {
+            margin-bottom: 10px;
+        }
+
+        .cve-list a, .blog-list a {
+            color: #79a9c9;
+            text-decoration: underline;
+        }
+
+        .footer {
+            text-align: center;
+            padding: 15px 0;
+            background-color: #2a2a2a;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
 
