--- a/index.html
+++ b/index.html
@@ -5,70 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- CSS dosyasını burada bağla -->
+    <link rel="stylesheet" href="styles.css"> <!-- CSS dosyasını bağla -->
 </head>
 <body>
-    <header class="main-header">
-        <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Ana Sayfa</a></li>
-                <li><a href="#cve">CVE Açıkları</a></li>
-                <li><a href="#articles">Yazılar</a></li>
-                <li><a href="#contact">İletişim</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="hero-section">
-        <h2>Güvenliğinizi Artırın</h2>
-        <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
-        <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+<header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#cve">CVE Açıkları</a></li>
+            <li><a href="#articles">Yazılar</a></li>
+            <li><a href="#contact">İletişim</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero-section">
+    <h2>Güvenliğinizi Artırın</h2>
+    <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
+    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+</section>
+
+<main>
+    <section id="featured" class="featured-section">
+        <h2 class="featured-title">Öne Çıkan Konular</h2>
+        <div class="card-container">
+            <div class="card">
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <h3>VPN Kullanımı</h3>
+                <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+        </div>
     </section>
 
-    <main>
-        <section id="featured" class="featured-section">
-            <h2 class="featured-title">Öne Çıkan Konular</h2>
-            <div class="card-container">
-                <div class="card">
-                    <h3>Phishing Saldırıları</h3>
-                    <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
-                    <a href="#" class="btn">Devamını Oku</a>
-                </div>
-                <div class="card">
-                    <h3>VPN Kullanımı</h3>
-                    <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
-                    <a href="#" class="btn">Devamını Oku</a>
-                </div>
-                <div class="card">
-                    <h3>Sosyal Mühendislik Saldırıları</h3>
-                    <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
-                    <a href="#" class="btn">Devamını Oku</a>
-                </div>
-            </div>
-        </section>
+    <section id="cve" class="cve-section">
+        <h2>Öne Çıkan CVE Açıkları</h2>
+        <ul class="cve-list">
+            <li><strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı. <a href="#">Detaylar</a></li>
+        </ul>
+    </section>
 
-        <section id="cve" class="cve-section">
-            <h2>Öne Çıkan CVE Açıkları</h2>
-            <ul class="cve-list">
-                <li><strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı. <a href="#">Detaylar</a></li>
-                <li><strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu. <a href="#">Detaylar</a></li>
-                <li><strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı. <a href="#">Detaylar</a></li>
-            </ul>
-        </section>
+    <section id="articles" class="articles-section">
+        <h2>Son Blog Yazıları</h2>
+        <ul class="blog-list">
+            <li><a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a></li>
+            <li><a href="#">2024'ün En Popüler VPN Hizmetleri</a></li>
+            <li><a href="#">Phishing Saldırılarında Yeni Taktikler</a></li>
+        </ul>
+    </section>
+</main>
 
-        <section id="articles" class="articles-section">
-            <h2>Son Blog Yazıları</h2>
-            <ul class="blog-list">
-                <li><a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a></li>
-                <li><a href="#">2024'ün En Popüler VPN Hizmetleri</a></li>
-                <li><a href="#">Phishing Saldırılarında Yeni Taktikler</a></li>
-            </ul>
-        </section>
-    </main>
+<footer class="footer">
+    <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+</footer>
 
-    <footer class="footer">
-        <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
-    </footer>
 </body>
 </html>
