--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
         <ul>
-                <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="cve.html">CVE Açıkları</a></li>
-                <li><a href="blog.html">Blog Yazıları</a></li>
-                <li><a href="sosyal.html">Sosyal Mühendislik</a></li>
-                <li><a href="phishing.html">Phishing</a></li>
-                <li><a href="vpn.html">VPN Kullanımı</a></li>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#cve">CVE Açıkları</a></li>
+            <li><a href="#articles">Yazılar</a></li>
+            <li><a href="#contact">İletişim</a></li>
         </ul>
     </nav>
 </header>
@@ -34,21 +32,18 @@
         <h2 class="featured-title">Öne Çıkan Konular</h2>
         <div class="card-container">
             <div class="card">
-                <img src="sosyal.png" alt="Sosyal Mühendislik" class="card-image">
-                <h3>Sosyal Mühendislik Saldırıları</h3>
-                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
-                <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
                 <h3>VPN Kullanımı</h3>
                 <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
-                <img src="phishing.png" alt="Phishing Saldırıları" class="card-image">
-                <h3>Phishing Saldırıları</h3>
-                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
         </div>
@@ -96,4 +91,3 @@
 
 </body>
 </html>
- 
