--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
                 <h3>VPN Kullanımı</h3>
                 <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="vpn.html" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
                 <img src="phishing.png" alt="Phishing Saldırıları" class="card-image">
-                <h3>Phishing Saldırıları</h3>
+                <h3>Phishing Saldırılarında Yeni Taktikler</h3>
                 <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="phishing.html" class="btn">Devamını Oku</a>
             </div>
         </div>
     </section>
@@ -79,45 +79,17 @@
             <h2 class="articles-title">Son Blog Yazıları</h2>
             <div class="blog-container">
                 <div class="blog-card">
-                    <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+                    <a href="threat-methods.html">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
                 </div>
                 <div class="blog-card">
-                    <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+                    <a href="vpn.html">2024'ün En Popüler VPN Hizmetleri</a>
                 </div>
                 <div class="blog-card">
-                    <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+                    <a href="phishing.html">Phishing Saldırılarında Yeni Taktikler</a>
                 </div>
             </div>
         </section>
     </div>
-
-    <section id="cve24029" class="cve-details">
-        <h2>CVE-2024-24029 Güvenlik Açığı</h2>
-        <p><strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
-        <h3>Örnek:</h3>
-        <p>Açık, özellikle güncellenmemiş sistemlerde daha fazla risk taşımaktadır. Saldırganlar, kullanıcıların sisteme giriş yapmasını bekleyerek bu açığı istismar edebilirler.</p>
-        <h3>Çözüm ve Koruma:</h3>
-        <ul>
-            <li>Sistem yazılımlarını güncelleyin.</li>
-            <li>Güvenlik duvarı ve saldırı tespit sistemleri kullanın.</li>
-            <li>Ağ trafiğini düzenli olarak izleyin.</li>
-            <li>Güvenlik yamalarını zamanında uygulayın.</li>
-        </ul>
-        <h3>Kod Örneği:</h3>
-        <pre>
-# Python ile basit bir güvenlik kontrolü
-import requests
-
-def check_vulnerability(url):
-    response = requests.get(url)
-    if "vulnerable" in response.text:
-        print("Açık var!")
-    else:
-        print("Güvenli.")
-        
-check_vulnerability("http://example.com/vulnerable_endpoint")
-        </pre>
-    </section>
 
 </main>
 
@@ -127,4 +99,3 @@ check_vulnerability("http://example.com/vulnerable_endpoint")
 
 </body>
 </html>
-
