--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
         <ul>
-            <li><a href="#home">Ana Sayfa</a></li>
-            <li><a href="#cve">CVE Açıkları</a></li>
-            <li><a href="#articles">Yazılar</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="cve.html">CVE Açıkları</a></li>
+            <li><a href="blog.html">Yazılar</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
         </ul>
     </nav>
 </header>
@@ -24,7 +24,7 @@
 <section class="hero-section">
     <h2>Güvenliğinizi Artırın</h2>
     <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
-    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+    <a href="cve.html" class="btn hero-btn">Son CVE Açıkları</a>
 </section>
 
 <main>
@@ -35,7 +35,7 @@
                 <img src="sosyal.png" alt="Sosyal Mühendislik" class="card-image">
                 <h3>Sosyal Mühendislik Saldırıları</h3>
                 <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="sosyal.html" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
                 <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
@@ -58,7 +58,7 @@
             <div class="cve-container">
                 <div class="cve-card">
                     <strong>CVE-2024-24029:</strong> Kritik bir uzaktan kod yürütme açığı. 
-                    <a href="#cve24029">Detaylar</a>
+                    <a href="cve24029.html">Detaylar</a>
                 </div>
                 <div class="cve-card">
                     <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
